# zero2prod-rs

./: Cargo.toml  Dockerfile
.github/workflows/: ci.yml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_name.rs  subsrciber_email.rs
src/routes/: subscriptions.rs
tests/: health_check.rs  web_api_tests.rs
