[package]
name = "zero2prod-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.2.2"
actix-web = "4.2.1"
chrono = "0.4.23"
config = { version = "0.13.3", features = ["yaml"] }
serde = { version = "1.0.151", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["macros", "postgres", "runtime-actix-rustls", "uuid", "chrono", "migrate"] }
uuid = { version = "1.2.2", features = ["v4"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
rusty-hook = "0.11.2"
tokio = "1.23.0"
url = "2.3.1"
futures = "0.3.25"

[hooks]
pre-commit = "cargo test"
pre-push = ["cargo check", "cargo fmt -- --check"]

[logging]
verbose = true
