[package]
name = "zero2prod-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.2.2"
actix-web = "4.2.1"
config = { version = "0.13.3", features = ["yaml"] }
once_cell = "1.17.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.151", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["macros", "postgres", "runtime-actix-rustls", "uuid", "time", "migrate"] }
time = "0.3.17"
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.1"
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
uuid = { version = "1.2.2", features = ["v4"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
rusty-hook = "0.11.2"
tokio = "1.23.0"
url = "2.3.1"
futures = "0.3.25"

[hooks]
pre-commit = "cargo test"
pre-push = ["cargo check", "cargo fmt -- --check"]

[logging]
verbose = true
